Replaced boot logic with dependency injection; build.gradle cleanup; Updated gradle wrapper