@@ -5,41 +5,44 @@ import me.supcheg.advancedmanhunt.event.ManHuntGameCreateEvent;
 import me.supcheg.advancedmanhunt.event.ManHuntGameStartEvent;
 import me.supcheg.advancedmanhunt.event.ManHuntGameStopEvent;
 import me.supcheg.advancedmanhunt.game.ManHuntGame;
+import me.supcheg.advancedmanhunt.game.ManHuntGameService;
 import me.supcheg.advancedmanhunt.gui.api.AdvancedButton;
 import me.supcheg.advancedmanhunt.gui.api.AdvancedGuiController;
 import me.supcheg.advancedmanhunt.gui.api.context.ButtonClickContext;
 import me.supcheg.advancedmanhunt.gui.api.context.ButtonTickContext;
 import me.supcheg.advancedmanhunt.gui.api.context.GuiTickContext;
-import me.supcheg.advancedmanhunt.paper.BukkitUtil;
 import me.supcheg.advancedmanhunt.reflect.ReflectCalled;
-import me.supcheg.advancedmanhunt.service.ManHuntGameService;
 import me.supcheg.advancedmanhunt.text.GuiText;
+import net.kyori.adventure.key.Key;
 import net.kyori.adventure.text.Component;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Unmodifiable;
 
+import javax.inject.Inject;
 import java.util.Arrays;
 import java.util.List;
 
-import static me.supcheg.advancedmanhunt.AdvancedManHuntPlugin.NAMESPACE;
+import static me.supcheg.advancedmanhunt.util.Keys.advancedmanhuntKey;
 
 public class GamesListGui implements Listener {
-    public static final String KEY = NAMESPACE + ":games_list";
+    public static final Key KEY = advancedmanhuntKey("games_list");
 
     private final ManHuntGameService service;
     private final ManHuntGame[] games;
     private boolean updated;
 
+    @Inject
     public GamesListGui(@NotNull ManHuntGameService service) {
         this.service = service;
         this.games = new ManHuntGame[18];
         this.updated = true;
+    }
 
-        BukkitUtil.registerEventListener(this);
+    public void register(@NotNull AdvancedGuiController controller) {
+        controller.loadResource(this, "gui/games_list.json");
     }
 
     @EventHandler
@@ -73,32 +76,33 @@ public class GamesListGui implements Listener {
 
         Player player = ctx.getPlayer();
         if (service.canConfigure(player, game)) {
-            game.getConfigInterface().open(player);
+            new ConfigurateGameGui(ctx.getGui().getController(), game).open(player);
         } else {
-            player.performCommand(NAMESPACE + " game join " + game.getUniqueId());
+            player.performCommand("advancedmanhunt game join " + game.getUniqueId());
         }
     }
 
     @ReflectCalled
     private void acceptGameButtonTickEnd(@NotNull ButtonTickContext ctx) {
-        if (updated) {
-            ManHuntGame game = getGameFromSlot(ctx.getSlot());
-            AdvancedButton button = ctx.getButton();
+        if (!updated) {
+            return;
+        }
 
-            if (game != null) {
-                button.show();
-                button.setLore(buildGameInfoLore(game));
-            } else {
-                button.hide();
-            }
+        ManHuntGame game = getGameFromSlot(ctx.getSlot());
+        AdvancedButton button = ctx.getButton();
+
+        if (game != null) {
+            button.show();
+            button.setLore(buildGameInfoLore(game));
+        } else {
+            button.hide();
         }
     }
 
-    @Unmodifiable
     @NotNull
     @Contract("_ -> new")
     private List<Component> buildGameInfoLore(@NotNull ManHuntGame game) {
-        return List.of(
+        return Arrays.asList(
                 GuiText.GAMES_LIST_GAME_STATE.build(game.getState()),
                 GuiText.GAMES_LIST_GAME_PLAYERS_COUNT.build(game.getPlayers().size()),
                 GuiText.GAMES_LIST_GAME_OWNER.build(game.getOwner()),
